k8s/deployment-transcode-workers.yaml
# @format

apiVersion: apps/v1
kind: Deployment
metadata:
  name: euterpe-transcode-workers
  labels:
    app: euterpe-transcode-workers
spec:
  replicas: 2
  selector:
    matchLabels:
      app: euterpe-transcode-workers
  template:
    metadata:
      labels:
        app: euterpe-transcode-workers
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: workload/audio-transcode
                    operator: In
                    values:
                      - "true"
      containers:
        - name: euterpe
          image: euterpe:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: euterpe-data
