k8s/service.yaml
# @format

apiVersion: v1
kind: Service
metadata:
  name: euterpe
  labels:
    app: euterpe
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: euterpe
